[package]
name = "podcast_history_converter"
version = "0.1.0"
authors = ["James Stewart <james.stewy@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
zip = "0.5.3"
tempfile = "3.1.0"
byteorder = "1.3.2"
reqwest = "0.9.22"
roxmltree = "0.7.1"
miniz_oxide = "=0.3.3"
clap = "2.33.0"
